# sqlitecpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  claude.md  conanfile.py  generate_coverage.sh
.devcontainer/: Dockerfile
.github/: codecov.yml
.github/workflows/: build.yml  ci.yml  claude-code-review.yml
cmake/: CompilerWarnings.cmake  conan_provider.cmake  coverage.cmake  sanitizers.cmake  sqlitecppConfig.cmake.in
include/: db_header.h  example.h  sqlite.h
include/io/: byte_input_stream.h  byte_output_stream.h
include/memorymgr/: memory_manager.h
include/serde/: db_header_serde.h
include/sqlite/os/: errors.hpp  file.hpp
include/stream/: byte_input_stream.h  byte_output_stream.h
src/: db_header.cc  example.cc  sqlite.cc
src/btree/: CMakeLists.txt
src/memorymgr/: memory_manager.cc
src/os/: CMakeLists.txt  errors.cpp  std_file.cpp  std_file.hpp
src/pager/: CMakeLists.txt
src/serde/: db_header_serde.cc
src/sql/: CMakeLists.txt
src/sqlite/: CMakeLists.txt
src/vm/: CMakeLists.txt
test/: CMakeLists.txt  file_fixture.h  test_db_header.cc  test_example.cc  test_sqlite_base.cc
test/core/: test_sqlite_base.cc
test/io/: test_byte_input_stream.cc  test_byte_output_stream.cc
test/memorymgr/: test_mmap_mem_mgr.cc
test/serde/: test_db_header_serde.cc
test/stream/: test_byte_input_stream.cc  test_byte_output_stream.cc
tests/: CMakeLists.txt  placeholder_test.cpp
tests/fixtures/: mock_file.hpp
tests/unit/os/: CMakeLists.txt  error_test.cpp  file_test.cpp  std_file_test.cpp
tools/: CMakeLists.txt
